# cocBot2

./: .env.example  Dockerfile  PROJECT_GUIDE.md  README.md  alembic.ini  config.example.yaml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_player_donation_snapshots.py  0003_capital_raid_weekends.py  0004_player_capital_contribution_snapshots.py  0005_manual_claimed_target_violation.py  0006_capital_raid_districts_and_dev_contribution.py  0007_capital_cycle_rework.py  (+4 more)
app/: container.py  main.py
scripts/: backup_sqlite.py  check_server_health.py  deploy_local.sh  deploy_remote.sh  install_on_server.sh  migrate_to_new_server.sh  prepare_remote_server.sh  recover_links_from_export.py  rollback_server_migration.sh  update_from_git.sh
tests/: conftest.py  fakes.py  helpers.py  test_admin_capital_handler.py  test_admin_manual_violation.py  test_admin_player_link.py  test_capital_export_violations.py  test_capital_raid_contribution.py  test_capital_raid_report.py  test_capital_raid_sync_snapshots.py  test_contribution_and_donations.py  test_contribution_breakdown.py  test_cwl_missed_attack_violations.py  test_deploy_and_migration_smoke.py  test_export_and_admin.py  test_fsm.py  test_manual_contribution.py  test_membership.py  test_notifications.py  test_recover_links_from_export.py  test_registration.py  test_server_migration_scripts.py  test_settings.py  test_smoke.py  test_startup_sync.py  test_stats.py  test_telegram_text.py  test_violation_counter_reset.py  test_violation_rules.py  test_war_sync.py  test_wars.py
(+87 files in other folders)
